--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,6 @@ background-color: var(--hero-button-hover);
 }
 
 .team-card {
-  /* box-shadow: ; */
   border-radius: 4px;
   overflow: hidden;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -425,6 +424,7 @@ background-color: var(--hero-button-hover);
 .team-button:focus {
   background-color: var(--accent-color);
   fill: var(--primary-color);
+  cursor: pointer;
 }
 
 
@@ -468,6 +468,7 @@ background-color: var(--hero-button-hover);
 .clients-icon:focus {
   border-color: var(--accent-color);
   fill: var(--accent-color);
+  cursor: pointer;
 }
 
 
@@ -545,6 +546,7 @@ background-color: var(--hero-button-hover);
 .footer .team-button:focus {
   background-color: var(--accent-color);
   fill: var(--primary-color);
+  cursor: pointer;
 }
 
 
@@ -605,6 +607,7 @@ background-color: var(--hero-button-hover);
 .button-filter:focus {
   color: var(--primary-color);
   background-color: var(--accent-color);
+  cursor: pointer;
 }
 
 
@@ -649,6 +652,15 @@ background-color: var(--hero-button-hover);
   margin-top: var(--card-set-gap);
 }
 
+.projects-item:hover,
+.projects-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
+}
+
+
 .projects-content {
   padding: 20px 24px;
   border: 1px solid var(--projects-border-color);
@@ -656,7 +668,6 @@ background-color: var(--hero-button-hover);
 }
 
 .projects-card {
-  /* box-shadow: ; */
   border-radius: 4px;
   overflow: hidden;
 }
