--- a/css/styles.css
+++ b/css/styles.css
@@ -607,6 +607,8 @@ background-color: var(--hero-button-hover);
 .button-filter:focus {
   color: var(--primary-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
   cursor: pointer;
 }
 
